--- a/sub/education.html
+++ b/sub/education.html
@@ -198,6 +198,33 @@
         }
 
 
+        @media all and (max-width: 425px){
+            section>ul>li {
+                color: white;
+                /* position: absolute; */
+                margin-left: 813px;
+                margin-top: 20px;
+            }
+        }
+
+        @media all and (min-width: 425px) and (max-width: 768px){
+            section>ul>li {
+                color: white;
+                /* position: absolute; */
+                margin-left: 919px;
+                margin-top: 20px;
+            }
+        }
+
+        @media all and (min-width: 768px) and (max-width: 1024px){
+            section>ul>li {
+                color: white;
+                /* position: absolute; */
+                margin-left: 919px;
+                margin-top: 20px;
+            }
+        }
+
 
     </style>
 </head>
