--- a/sub/projects.html
+++ b/sub/projects.html
@@ -141,13 +141,14 @@
 <div>
     <ul>
         <li><a href="../My%20Projects/CSS/CSS_Positions/Assignment-%2001"><h2>Assignment - 01</h2></a></li>
-        <li><a href="../My%20Projects/CSS/CSS_Positions/Assignment-%2002"><h2>Assignment - 02</h2></a></li>
-        <li><a href="../My%20Projects/CSS/CSS_Positions/Assignment-%2003"><h2>Assignment - 03</h2></a></li>
-        <li><a href="../My%20Projects/CSS/CSS_Positions/Assignment-%2004"><h2>Assignment - 04</h2></a></li><br>
-        <li><a href="../My%20Projects/CSS/Animations/Assignment-%2005"><h2>Assignment - 05</h2></a></li>
-        <li><a href="../My%20Projects/CSS/Animations/Assignment-%2006"><h2>Assignment - 06</h2></a></li>
-        <li><a href="../My%20Projects/CSS/Animations/Assignment-%2007"><h2>Assignment - 07</h2></a></li>
-        <li><a href="../My%20Projects/CSS/Animations/Assignment-%2008"><h2>Assignment - 08</h2></a></li>
+        <li><a href="../My%20Projects/CSS/Animations/Assignment-%2005/case%201.html"><h2>Assignment - 02</h2></a></li>
+        <li><a href="../My%20Projects/CSS/CSS_Positions/Assignment-%2003"><h2>Assignment - 02</h2></a></li>
+        <li><a href="../My%20Projects/CSS/CSS_Positions/Assignment-%2004"><h2>Assignment - 03</h2></a></li>
+        <li><a href="../My%20Projects/CSS/Animations/Assignment-%2005"><h2>Assignment - 04</h2></a></li>
+        <li><a href="../My%20Projects/CSS/Animations/Assignment-%2006"><h2>Assignment - 05</h2></a></li>
+        <li><a href="../My%20Projects/CSS/Animations/Assignment-%2007"><h2>Assignment - 06</h2></a></li>
+        <li><a href="../My%20Projects/CSS/Animations/Assignment-%2008/index1.html"><h2>Assignment - 07</h2></a></li>
+        <li><a href="../My%20Projects/CSS/Animations/Assignment-%2008/index2.html"><h2>Assignment - 08</h2></a></li>
         <li><a href="../My%20Projects/CSS/Animations/Assignment-%2009"><h2>Assignment - 09</h2></a></li>
         <li><a href="../My%20Projects/CSS/Animations/Assignment-%2010"><h2>Assignment - 10</h2></a></li>
     </ul>
