--- a/My Projects/CSS Frameworks/ BootstrapPOS/new customer.html
+++ b/My Projects/CSS Frameworks/ BootstrapPOS/new customer.html
@@ -12,6 +12,17 @@
             font-size: 25px;
             font-weight: bolder;
         }
+
+        .alert-success {
+            color: #0f5132;
+            background-color: #d1e7dd;
+            border-color: #badbcc;
+            font-family: cursive;
+            font-size: 21px;
+            font-weight: bold;
+        }
+
+
     </style>
 
 </head>
@@ -56,6 +67,154 @@
             </div>
         </div>
     </nav>
+
+
+<!--    customer main-->
+
+   <main class="container">
+       <div class="alert alert-success" role="alert">
+           Customer
+       </div>
+
+       <nav class="mt-30 navbar navbar-expand-lg navbar-light bg-light">
+           <div class="container-fluid">
+
+               <div class="mt-10  collapse navbar-collapse" id="navbarNav">
+                   <ul class="navbar-nav">
+                       <li class="nav-item">
+                           <a class="nav-link active" aria-current="page" href="#">Home</a>
+                       </li>
+                       <li class="nav-item">
+                           <a class="nav-link" href="#">Customer</a>
+                       </li>
+
+                   </ul>
+               </div>
+           </div>
+       </nav>
+
+<!--       <button type="button" class="btn btn-warning mt-5">Warning</button>-->
+       <button type="button" class="btn btn-info mt-5">View All Customers</button>
+
+       <section class="row">
+
+<!--           1st column-->
+           <div class="col mt-5">
+
+
+               <section class="row border border-5">
+               <div class="card bg-success fw-bold">
+                   <div class="card-body">
+                       Customer Search
+                   </div>
+               </div>
+
+
+               <form>
+                   <fieldset disabled>
+
+                       <div class="mb-3">
+                           <input type="text" id="disabledTextInput" class="form-control" placeholder="Input Name/NIC/Tp here">
+                       </div>
+                       <div class="mb-3">
+                           <select id="disabledSelect" class="form-select">
+                               <option>Name</option>
+                           </select>
+                       </div>
+
+                   </fieldset>
+                   <button type="button" class="btn btn-success">Search</button>
+               </form>
+               </section>
+
+               <section class="row mt-5">
+                   <div class="btn-group mt-10" role="group" aria-label="Basic mixed styles example">
+                                      <button type="button" class="btn btn-danger">Delete</button>
+                                      <button type="button" class="btn btn-warning">Details</button>
+                                      <button type="button" class="btn btn-success">Clear</button>
+                                  </div>
+               </section>
+           </div>
+
+
+
+
+
+<!--            2nd column-->
+           <div class="col border border-5">
+
+<!--               <section class="row">-->
+<!--                   <button type="button" class="btn btn-warning">Warning</button>-->
+<!--                   <button type="button" class="btn btn-info">Info</button>-->
+<!--               </section>-->
+
+
+               <div class="col">
+                   <div class="card bg-success fw-bold">
+                       <div class="card-body">
+                           New Customer
+                       </div>
+                   </div>
+               </div>
+
+
+               <form class="row g-3">
+                   <div class="col-md-6">
+                       <label for="inputEmail4" class="form-label">Customer Id</label>
+                       <input type="email" class="form-control" id="inputEmail4">
+                   </div>
+                   <div class="col-md-6">
+                       <label for="inputPassword4" class="form-label">Customer Name</label>
+                       <input type="password" class="form-control" id="inputPassword4">
+                   </div>
+                   <div class="col-12">
+                       <label for="inputAddress" class="form-label">Address</label>
+                       <input type="text" class="form-control" id="inputAddress" placeholder="1234 Main St">
+                   </div>
+                   <div class="col-12">
+                       <label for="inputAddress2" class="form-label">Salary</label>
+                       <input type="text" class="form-control" id="inputAddress2" placeholder="Apartment, studio, or floor">
+                   </div>
+               </form>
+
+
+               <button type="button" class="mt-5  btn btn-success">Save</button>
+               <button type="button" class="mt-5  btn btn-warning">Update</button>
+               <button type="button" class="mt-5  btn btn-danger">Delete</button>
+
+           </div>
+       </section>
+
+
+       <section class="col mt-5">
+           <table class="table">
+               <thead>
+               <tr>
+                   <th>Customer Id</th>
+                   <th>Customer Name</th>
+                   <th>Age</th>
+                   <th>Tp</th>
+                   <th>Salary</th>
+               </tr>
+               </thead>
+               <tbody>
+               <tr>
+                   <td>C-001</td>
+                   <td>Chamodi</td>
+                   <td>23</td>
+                   <td>123</td>
+                   <td>40000.00</td>
+               </tr>
+
+               </tbody>
+           </table>
+       </section>
+
+   </main>
+
+
+
+
 </main>
 </body>
 </html>
