--- a/My Projects/CSS Frameworks/ BootstrapPOS/new item.html
+++ b/My Projects/CSS Frameworks/ BootstrapPOS/new item.html
@@ -103,7 +103,7 @@
                 <section class="row border border-5">
                     <div class="card bg-success fw-bold">
                         <div class="card-body">
-                            Customer Search
+                            Item Search
                         </div>
                     </div>
 
@@ -112,7 +112,7 @@
                         <fieldset disabled>
 
                             <div class="mb-3">
-                                <input type="text" id="disabledTextInput" class="form-control" placeholder="Input Name/NIC/Tp here">
+                                <input type="text" id="disabledTextInput" class="form-control" placeholder="Input Name/Code here">
                             </div>
                             <div class="mb-3">
                                 <select id="disabledSelect" class="form-select">
@@ -150,7 +150,7 @@
                 <div class="col">
                     <div class="card bg-success fw-bold">
                         <div class="card-body">
-                            New Customer
+                            New Item
                         </div>
                     </div>
                 </div>
@@ -158,20 +158,20 @@
 
                 <form class="row g-3">
                     <div class="col-md-6">
-                        <label for="inputEmail4" class="form-label">Customer Id</label>
+                        <label for="inputEmail4" class="form-label">Item Code</label>
                         <input type="email" class="form-control" id="inputEmail4">
                     </div>
                     <div class="col-md-6">
-                        <label for="inputPassword4" class="form-label">Customer Name</label>
+                        <label for="inputPassword4" class="form-label">Item Name</label>
                         <input type="password" class="form-control" id="inputPassword4">
                     </div>
                     <div class="col-12">
-                        <label for="inputAddress" class="form-label">Address</label>
-                        <input type="text" class="form-control" id="inputAddress" placeholder="1234 Main St">
+                        <label for="inputAddress" class="form-label">Item Price</label>
+                        <input type="text" class="form-control" id="inputAddress" placeholder="0.00">
                     </div>
                     <div class="col-12">
-                        <label for="inputAddress2" class="form-label">Salary</label>
-                        <input type="text" class="form-control" id="inputAddress2" placeholder="Apartment, studio, or floor">
+                        <label for="inputAddress2" class="form-label">Item Quantity</label>
+                        <input type="text" class="form-control" id="inputAddress2" placeholder="">
                     </div>
                 </form>
 
@@ -188,27 +188,27 @@
             <table class="table">
                 <thead>
                 <tr>
-                    <th>Customer Id</th>
-                    <th>Customer Name</th>
-                    <th>Age</th>
-                    <th>Tp</th>
-                    <th>Salary</th>
+                    <th>Item Code</th>
+                    <th>Item Name</th>
+                    <th>Price</th>
+                    <th>Quantity</th>
+
                 </tr>
                 </thead>
                 <tbody>
                 <tr>
-                    <td>C-001</td>
-                    <td>Chamodi</td>
-                    <td>23</td>
-                    <td>123</td>
-                    <td>40000.00</td>
+                    <td>I-001</td>
+                    <td>Sugar</td>
+                    <td>500.00</td>
+                    <td>3</td>
+                    <td>1500.00</td>
                 </tr>
                 <tr>
-                    <td>C-002</td>
-                    <td>Nirasha</td>
-                    <td>21</td>
-                    <td>123</td>
-                    <td>30000.00</td>
+                    <td>I-002</td>
+                    <td>Rice</td>
+                    <td>600</td>
+                    <td>5</td>
+                    <td>3000.00</td>
                 </tr>
                 </tbody>
             </table>
