--- a/My Projects/CSS Frameworks/ BootstrapPOS/new customer.html
+++ b/My Projects/CSS Frameworks/ BootstrapPOS/new customer.html
@@ -22,7 +22,9 @@
             font-weight: bold;
         }
 
-
+        .mt-5 {
+            margin-top: 1rem!important;
+        }
     </style>
 
 </head>
@@ -205,13 +207,13 @@
                    <td>123</td>
                    <td>40000.00</td>
                </tr>
-               <tr>
-                   <td>C-002</td>
-                   <td>Nirasha</td>
-                   <td>21</td>
-                   <td>123</td>
-                   <td>30000.00</td>
-               </tr>
+<!--               <tr>-->
+<!--                   <td>C-002</td>-->
+<!--                   <td>Nirasha</td>-->
+<!--                   <td>21</td>-->
+<!--                   <td>123</td>-->
+<!--                   <td>30000.00</td>-->
+<!--               </tr>-->
                </tbody>
            </table>
        </section>
