--- a/My Projects/CSS Frameworks/ BootstrapPOS/index.html
+++ b/My Projects/CSS Frameworks/ BootstrapPOS/index.html
@@ -10,7 +10,7 @@
 
     .navbar-light .navbar-brand {
         color: rgb(28 145 58 );
-        font-size: 25px;
+        font-size: 40px;
         font-weight: bolder;
     }
     .card-body {
@@ -62,11 +62,11 @@
         color: #574f43;
         font-size: 30px;
     }
-    .navbar-expand-lg .navbar-collapse {
-        display: flex!important;
-        flex-basis: auto;
-        font-size: 28px;
-    }
+    /*.navbar-expand-lg .navbar-collapse {*/
+    /*    display: flex!important;*/
+    /*    flex-basis: auto;*/
+    /*    font-size: 28px;*/
+    /*}*/
 
 </style>
 
@@ -76,7 +76,7 @@
 <main class="container-fluid">
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container-fluid">
-        <a class="navbar-brand" href="#">Uresha POS System</a>
+        <a class="navbar-brand" href="#">Family Fare Market</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -152,11 +152,11 @@
 
 <!--Title-->
 <section class="col">
-    <div>
+    <div class="row">
         <h1>Fresh & Organic Foods For You</h1>
     </div>
 
-    <div class="row">
+    <div class="row mt-5">
         <div class="col">
             <div class="card" style="width: 18rem;">
                 <img src="assets/images/harvest.png" class="card-img-top" alt="...">
@@ -167,7 +167,7 @@
         </div>
 
 
-        <div class="col">
+        <div class="col mt-8">
             <div class="card" style="width: 18rem;">
                 <img src="assets/images/delivery.png" class="card-img-top" alt="...">
                 <div class="card-body">
