--- a/My Projects/CSS Frameworks/ BootstrapPOS/new customer.html
+++ b/My Projects/CSS Frameworks/ BootstrapPOS/new customer.html
@@ -20,10 +20,23 @@
             font-family: cursive;
             font-size: 21px;
             font-weight: bold;
+            height: 48px;
         }
+
 
         .mt-5 {
             margin-top: 1rem!important;
+        }
+
+        .navbar-expand-lg .navbar-collapse {
+            display: flex!important;
+            flex-basis: auto;
+            height: 8px;
+        }
+
+        .form-label {
+            margin-bottom: 0.5rem;
+            height: 4px;
         }
     </style>
 
@@ -101,7 +114,7 @@
        <section class="row">
 
 <!--           1st column-->
-           <div class="col mt-5">
+           <div class="col-4 mt-5">
 
 
                <section class="row border border-5">
