--- a/My Projects/CSS Frameworks/ BootstrapPOS/index.html
+++ b/My Projects/CSS Frameworks/ BootstrapPOS/index.html
@@ -39,17 +39,7 @@
         font-weight: bold;
     }
 
-    /*.row>* {*/
-    /*    flex-shrink: 0;*/
-    /*    width: 100%;*/
-    /*    max-width: 100%;*/
-    /*    padding-right: calc(var(--bs-gutter-x) * .5);*/
-    /*    padding-left: calc(var(--bs-gutter-x) * .5);*/
-    /*    margin-left: 905px;*/
-    /*    margin-top: -547px;*/
-    /*    color: orange;*/
-    /*    font-weight: bolder;*/
-    /*}*/
+
     .h1, h1 {
         font-size: calc(1.375rem + 1.5vw);
         color: orange;
@@ -62,11 +52,33 @@
         color: #574f43;
         font-size: 30px;
     }
-    /*.navbar-expand-lg .navbar-collapse {*/
-    /*    display: flex!important;*/
-    /*    flex-basis: auto;*/
-    /*    font-size: 28px;*/
-    /*}*/
+
+
+    .alert-success {
+        color: #0f5132;
+        background-color: #d1e7dd;
+        border-color: #badbcc;
+        font-family: cursive;
+        font-size: 21px;
+        font-weight: bold;
+        height: 48px;
+    }
+
+
+    .mt-5 {
+        margin-top: 1rem!important;
+    }
+
+    .navbar-expand-lg .navbar-collapse {
+        display: flex!important;
+        flex-basis: auto;
+        height: 8px;
+    }
+
+    .form-label {
+        margin-bottom: 0.5rem;
+        height: 4px;
+    }
 
 </style>
 
@@ -115,7 +127,7 @@
 
 <!--slide images-->
     <section class="row">
-<section class="col mt-5">
+<section class="col mt-2">
 
 <!--    <section class="container-fluid">-->
         <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
@@ -145,6 +157,20 @@
             </button>
         </div>
 
+
+    <button type="button" class="mt-4 btn btn-secondary" data-bs-container="body" data-bs-toggle="popover" data-bs-placement="top" data-bs-content="Top popover">
+        070-5135322
+    </button>
+    <button type="button" class="mt-4 btn btn-secondary" data-bs-container="body" data-bs-toggle="popover" data-bs-placement="right" data-bs-content="Right popover">
+        090-7654322
+    </button>
+    <button type="button" class="mt-4 btn btn-secondary" data-bs-container="body" data-bs-toggle="popover" data-bs-placement="bottom" data-bs-content="Bottom popover">
+        familyfare@gmail.com
+    </button>
+    <button type="button" class="mt-4 btn btn-secondary" data-bs-container="body" data-bs-toggle="popover" data-bs-placement="left" data-bs-content="Left popover">
+        Kithulampitiya,Galle.
+    </button>
+
 </section>
 
 
@@ -153,7 +179,7 @@
 <!--Title-->
 <section class="col">
     <div class="row">
-        <h1>Fresh & Organic Foods For You</h1>
+        <h1>Fresh & Organic Foods For You...</h1>
     </div>
 
     <div class="row mt-5">
@@ -171,27 +197,179 @@
             <div class="card" style="width: 18rem;">
                 <img src="assets/images/delivery.png" class="card-img-top" alt="...">
                 <div class="card-body">
-                    <p class="card-text">Fresh and Organic</p>
+                    <p class="card-text">Free Delivery</p>
                 </div>
             </div>
         </div>
 
 
-
-
-
-
     </div>
 </section>
-
-
     </section>
 
 
 
 
 
+    <body>
+    <main class="container-fluid">
 
+
+
+        <!--    customer main-->
+
+        <main class="container mt-5">
+            <div class="alert alert-success" role="alert">
+                Customer
+            </div>
+
+            <nav class="mt-30 navbar navbar-expand-lg navbar-light bg-light">
+                <div class="container-fluid">
+
+                    <div class="mt-10  collapse navbar-collapse" id="navbarNav">
+                        <ul class="navbar-nav">
+                            <li class="nav-item">
+                                <a class="nav-link active" aria-current="page" href="#">Home</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">Customer</a>
+                            </li>
+
+                        </ul>
+                    </div>
+                </div>
+            </nav>
+
+            <!--       <button type="button" class="btn btn-warning mt-5">Warning</button>-->
+            <button type="button" class="btn btn-info mt-5">View All Customers</button>
+
+            <section class="row">
+
+                <!--           1st column-->
+                <div class="col-4 mt-5">
+
+
+                    <section class="row border border-5">
+                        <div class="card bg-success fw-bold">
+                            <div class="card-body">
+                                Customer Search
+                            </div>
+                        </div>
+
+
+                        <form>
+                            <fieldset disabled>
+
+                                <div class="mb-3">
+                                    <input type="text" id="disabledTextInput" class="form-control" placeholder="Input Name/NIC/Tp here">
+                                </div>
+                                <div class="mb-3">
+                                    <select id="disabledSelect" class="form-select">
+                                        <option>Name</option>
+                                    </select>
+                                </div>
+
+                            </fieldset>
+                            <button type="button" class="btn btn-success">Search</button>
+                        </form>
+                    </section>
+
+                    <section class="row mt-5">
+                        <div class="btn-group mt-10" role="group" aria-label="Basic mixed styles example">
+                            <button type="button" class="btn btn-danger">Delete</button>
+                            <button type="button" class="btn btn-warning">Details</button>
+                            <button type="button" class="btn btn-success">Clear</button>
+                        </div>
+                    </section>
+                </div>
+
+
+
+
+
+                <!--            2nd column-->
+                <div class="col border border-5">
+
+                    <!--               <section class="row">-->
+                    <!--                   <button type="button" class="btn btn-warning">Warning</button>-->
+                    <!--                   <button type="button" class="btn btn-info">Info</button>-->
+                    <!--               </section>-->
+
+
+                    <div class="col">
+                        <div class="card bg-success fw-bold">
+                            <div class="card-body">
+                                New Customer
+                            </div>
+                        </div>
+                    </div>
+
+
+                    <form class="row g-3">
+                        <div class="col-md-6">
+                            <label for="inputEmail4" class="form-label">Customer Id</label>
+                            <input type="email" class="form-control" id="inputEmail4">
+                        </div>
+                        <div class="col-md-6">
+                            <label for="inputPassword4" class="form-label">Customer Name</label>
+                            <input type="password" class="form-control" id="inputPassword4">
+                        </div>
+                        <div class="col-12">
+                            <label for="inputAddress" class="form-label">Address</label>
+                            <input type="text" class="form-control" id="inputAddress" placeholder="1234 Main St">
+                        </div>
+                        <div class="col-12">
+                            <label for="inputAddress2" class="form-label">Salary</label>
+                            <input type="text" class="form-control" id="inputAddress2" placeholder="Apartment, studio, or floor">
+                        </div>
+                    </form>
+
+
+                    <button type="button" class="mt-5  btn btn-success">Save</button>
+                    <button type="button" class="mt-5  btn btn-warning">Update</button>
+                    <button type="button" class="mt-5  btn btn-danger">Delete</button>
+
+                </div>
+            </section>
+
+
+            <section class="col mt-5">
+                <table class="table">
+                    <thead>
+                    <tr>
+                        <th>Customer Id</th>
+                        <th>Customer Name</th>
+                        <th>Age</th>
+                        <th>Tp</th>
+                        <th>Salary</th>
+                    </tr>
+                    </thead>
+                    <tbody>
+                    <tr>
+                        <td>C-001</td>
+                        <td>Chamodi</td>
+                        <td>23</td>
+                        <td>123</td>
+                        <td>40000.00</td>
+                    </tr>
+                    <!--               <tr>-->
+                    <!--                   <td>C-002</td>-->
+                    <!--                   <td>Nirasha</td>-->
+                    <!--                   <td>21</td>-->
+                    <!--                   <td>123</td>-->
+                    <!--                   <td>30000.00</td>-->
+                    <!--               </tr>-->
+                    </tbody>
+                </table>
+            </section>
+
+        </main>
+
+
+
+
+    </main>
+    </body>
 </main>
 <script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>
 </body>
